Añadido el parche de Last Bible (Versión final de la web)

--- a/index.html
+++ b/index.html
@@ -56,6 +56,16 @@
         <div class="main-menu" id="main-menu"></div>
         <div class="second-bar" id="second-bar"></div>
         <div class="content-container">
+		<div class="content-title" style="background-image: url('https://glowtranslations.tk/translations/lastbible/imageheader/credits.jpg');">
+          <a class="content-title-text"><div class="background-title-text"><div>¡Lanzamos el parche de traducción al español de Last Bible!</div></div></a>
+          </div>
+          <div class="content">
+            Tal y como podéis leer en el título de la noticia, ¡hacemos público el parche de traducción al español de Last Bible!<br />
+			Pero eso no es todo, el parche no vendrá solo, ¡también incluye una elaborada guía del juego de 90 páginas con...<br /><br />
+            <center>
+                <a class="boton_readtradu" href="https://tradusquare.es/entrada.php?Lanzamos-el-parche-de-traduccion-al-espanol-de-Last-Bible">Leer en TraduSquare</a>
+            </center>
+          </div>
             <div class="content-title" style="background-image: url('articles/03-2019/lastbiblefasetesteo-25/images/top.jpg');">
                     <a class="content-title-text"><div class="background-title-text"><div>¡Iniciamos la fase de testeo de Last Bible!</div></div></a>
                     </div>
@@ -119,17 +129,6 @@
                             <a class="boton_readtradu" href="https://tradusquare.es/entrada.php?Anunciamos-el-proyecto-de-traduccion-de-Last-Bible">Leer en TraduSquare</a>
                         </center>
                     </div>
-            <div class="content-title" style="background-image: url('articles/12-2018/bromasyavances-29/images/top.jpg');">
-          <a class="content-title-text"><div class="background-title-text"><div>¡Bromas navideñas y avances sobre nuestros proyectos!</div></div></a>
-          </div>
-          <div class="content">
-            ¡Buenas a todos! Lo primero de todo, ¡Feliz navidad! Y lo segundo, menudo sorpresón os dimos ayer con el lanzamiento de la traducción de Rune Factory 5, eh. Nadie se lo esperaba xD.<br />
-            Pero bueno, para los que aún no lo sepan, ayer, día 28 de diciembre de 2018, fue el día de los santos inocentes en España, donde...<br /><br />
-            <center>
-                <a class="boton_readmore" href="articles/12-2018/bromasyavances-29/bromasyavances.html">Leer en GlowTranslations</a>
-                <a class="boton_readtradu" href="https://tradusquare.es/entrada.php?Bromas-navidenas-y-avances-sobre-nuestros-proyectos">Leer en TraduSquare</a>
-            </center>
-          </div>
         </div>
         <div class="module">
             <div class="content-container-widgets">
